[package]
name = "mempool_filters"
version = "0.1.0"
authors = ["Levon Oganyan <lemarwin@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
bitcoin-utxo = { git = "https://github.com/hexresearch/bitcoin-utxo", rev = "452327a2c805d83e663277e416e0832c9e9151ac" }
byte-strings = "^0.1"
byteorder = "1"
bytes = "1"
chrono = "^0.4"
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode", rev="8c04d05aecc1d0f320fb1ebed0878772c1e83c72" }
dashmap = "4.0"
ergvein-filters = { git = "https://github.com/hexresearch/ergvein-filters", rev = "529d0dd4ff9bea3c0e2508ace972de58e2236740" }
futures = "0.3"
lazy_static = "1.4.0"
rayon = "1.5.0"
rocksdb = "0.15.0"
sha2 = "0.9.5"
thiserror = "1.0"
time = "0.2.26"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "^0.6", features = [ "codec" ] }

[dev-dependencies]
hex = "0.4.3"
